@@ -1,5 +1,8 @@
 2002-05-10  Alan Modra  <amodra@bigpond.net.au>
 
+	* elf32-i386.c (elf_i386_relocate_section): Remove overflow checks
+	addend in 2002-05-09 commit.
+
 	* elf32-hppa.c (elf32_hppa_size_stubs): Revert part of 2002-05-04,
 	don't look for stubs on all undefined syms.
 
